--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
 <head>
     <meta charset="utf-8">
     <script type="text/javascript" src="/lib/jquery-2.2.3.min.js"></script>
-    <script type="text/javascript" src="/lib/tictac.js"></script>
+    <script type="text/javascript" src="/lib/jquery.loadTemplate-1.4.4.min.js"></script>
     <link rel="stylesheet" href="/css/style.css">
     <title>Крестики нолики</title>
+    <script type="text/html" id="table"></script>
 </head>
 <h1>Tic tac toe</h1>
 <body>
     <table border="1" id="tictac_table">
         <tbody></tbody>
     </table>
+    <script type="text/javascript" src="/lib/tictac.js"></script>
 </body>
 </html>
-<script>
-    buid_table();
-    click_on_field();
-</script>
