--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <h1>Tic tac toe</h1>
 <body>
-    <table border="1" id="tictac_table">
+    <table id="tictac_table">
         <tbody></tbody>
     </table>
     <script type="text/javascript" src="/lib/tictac.js"></script>
