--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <table id="tictac_table">
         <tbody></tbody>
     </table>
+    <script type="text/javascript" src="/lib/backend.js"></script>
     <script type="text/javascript" src="/lib/tictac.js"></script>
 </body>
 </html>
