--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <h1>Tic tac toe</h1>
 <body>
-    <table id="tictac_table">
+    <table id="tictacTable">
         <tbody></tbody>
     </table>
-    <script type="text/javascript" src="/lib/backend.js"></script>
+    <script type="text/javascript" src="/lib/gameLogic.js"></script>
     <script type="text/javascript" src="/lib/tictac.js"></script>
 </body>
 </html>
